# mcp-client-bedrock

./: README.md  pyproject.toml
src/mcp_client_bedrock/: __init__.py  client.py  conversation.py  tools.py
src/mcp_client_bedrock/test_server/: server.py
